# spanner-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  example.env.txt  launcher.py  pyproject.toml  requirements.txt  setup.py  spanner.py  update-pycord.sh
.github/workflows/: codeql-analysis.yml
.run/: Run.run.xml  launcher.run.xml
dashboard/: package-lock.json  package.json
dashboard/pages/: index.js
scripts/: cli.py  first_run.py
src/: __init__.py  launcher.py  utils.py  views.py
src/bot/: client.py  server.py
src/bot/backend/: auth.py
src/cogs/: debug.py  info.py  mod.py  util.py
src/cogs/official/: config.py  debug.py  info.py  mod.py  util.py  welcome.py
src/cogs/user/: README.md
src/database/: __init__.py  models.py
src/spanner/: __init__.py  launcher.py  spanner.py
src/spanner/bot/: client.py  server.py
src/spanner/bot/backend/: admin.py
src/spanner/cogs/official/: config.py  debug.py  info.py  mod.py  util.py
src/spanner/cogs/user/: README.md
src/spanner/database/: models.py
src/spanner/utils/: trace_resources.py  utils.py  views.py
src/utils/: __init__.py  converters.py  errors.py  trace_resources.py  utils.py  views.py
